--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:staging": "env-cmd -f .env.staging npm run-script build",
+    "build:production": "env-cmd -f .env.production npm run build-css && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
