--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.7",
+    "scss": "^0.2.4",
     "toastr": "^2.1.4",
     "url-template": "^3.0.0",
     "web-vitals": "^2.1.3"
