--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "install": "^0.13.0",
+    "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
