--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-paginate": "^8.1.2",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
