--- a/.env.staging
+++ b/.env.staging
@@ -1,1 +1,1 @@
-DOMAIN=http://pbsservice-dev.eba-qjsypjus.ap-southeast-2.elasticbeanstalk.com
+DOMAIN=http://sbaprj-dev.eba-dyjmryhk.ap-southeast-2.elasticbeanstalk.com/pbs-service
