add staging env

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-DOMAIN=http://pbsservice-prd.eba-qjsypjus.ap-southeast-2.elasticbeanstalk.com
+DOMAIN=http://sbaprj-dev.eba-dyjmryhk.ap-southeast-2.elasticbeanstalk.com
