--- a/.env.staging
+++ b/.env.staging
@@ -1,1 +1,1 @@
-DOMAIN=http://sbaprj-dev.eba-dyjmryhk.ap-southeast-2.elasticbeanstalk.com/pbs-service
+DOMAIN=http://sbaprj-dev.eba-dyjmryhk.ap-southeast-2.elasticbeanstalk.com
