--- a/package.json
+++ b/package.json
@@ -24,7 +24,20 @@
     "scss": "^0.2.4",
     "toastr": "^2.1.4",
     "url-template": "^3.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "react-chartjs-2": "^3.0.4",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/lab": "^5.0.0-alpha.53",
+    "@mui/material": "^5.0.6",
+    "@mui/styles": "^5.0.2",
+    "@emotion/cache": "^11.5.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "uuid": "^8.3.0",
+    "date-fns": "^2.25.0",
+    "next": "^12.0.3-canary.7"
   },
   "scripts": {
     "start": "react-scripts start",
