--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "install": "^0.13.0",
     "npm": "^8.5.0",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.2",
     "react-pro-sidebar": "^0.7.1",
