--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "reactstrap": "^8.9.0",
+    "recharts": "^2.1.9",
     "sass": "^1.49.7",
     "scss": "^0.2.4",
     "toastr": "^2.1.4",
